update to use cookies vs plain tokens
