# server/src/services/users.ts
@@ -1,27 +1,21 @@
 import * as userDb from "../db/queries/users.js";
-import * as sessionsDb from "../db/queries/sessions.js";
 import { UserResponse } from "../db/schema.js";
-import { hashPassword, generateToken, makeRefreshToken } from "./auth.js";
+import { hashPassword, makeSessionToken, LoginResult } from "./auth.js";
+import * as sessionsDb from "../db/queries/sessions.js";
 import { NotFoundError } from "../api/errors.js";
-
-type UserWithTokens = UserResponse & {
-  accessToken: string;
-  refreshToken: string;
-};
 
 export async function addUser(
   name: string,
   email: string,
   password: string,
-): Promise<UserWithTokens> {
+): Promise<LoginResult> {
   const hashedPassword = await hashPassword(password);
   const user = await userDb.createUser(name, email, hashedPassword);
 
-  const accessToken = generateToken(user.id);
-  const refreshToken = makeRefreshToken();
-  await sessionsDb.createSession(user.id, refreshToken);
+  const sessionToken = makeSessionToken();
+  await sessionsDb.createSession(user.id, sessionToken);
 
-  return { ...user, accessToken, refreshToken };
+  return { user, sessionToken };
 }
 
 export async function getUserByEmail(email: string): Promise<UserResponse> {
